[workspace]
members = [
    "credit",
    "feed",
    "mall"
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = { path = "../linera-protocol/linera-sdk" }
linera-views = { path = "../linera-protocol/linera-views" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
cid = "0.10.1"
log = "0.4.17"
wasm-encoder = "0.24.1"
wasmer = { version = "=3.1.1", features = ["singlepass"] }
wasmer-middlewares = "3.1.1"
wasmparser = "0.101.1"
wasmtime = "1.0"
wit-bindgen-guest-rust = { version = "0.2.0", package = "linera-wit-bindgen-guest-rust" }
wit-bindgen-host-wasmer-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmer-rust" }
wit-bindgen-host-wasmtime-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmtime-rust" }
credit = { path = "./credit" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
