[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = "0.2.0"
linera-views = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
cid = "0.10.1"

[dev-dependencies]
linera-sdk = { version = "0.2.0", features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "feed_contract"
path = "src/contract.rs"

[[bin]]
name = "feed_service"
path = "src/service.rs"
